@@ -4,6 +4,9 @@ Changes for APR 1.7.3
   *) apr_socket_sendfile: Use WSAIoctl() to get TransmitFile function
      pointer on Windows.
 
+  *) apr_dir_read: Do not request short file names on Windows 7
+     and later. [Ivan Zhakov]
+
 Changes for APR 1.7.2
 
   *) Correct a packaging issue in 1.7.1. The contents of the release were
